--- a/config_decoder.yaml
+++ b/config_decoder.yaml
@@ -19,10 +19,10 @@ filter_size: 0.5  # bandpass filter size (applied if not none)**
 # 2018.
 
 # model parameters
-nmax: 200  # number of selected features
+nmax: 200  # number of selected features (applied if not none)
 radius: 1.6  # minimum radius between selected features in mm (applied if not none)
 feature_scaling: standard  # feature scaling method: min_max | standard | none
-sample_scaling: standard  # sample normalization method: norm | standard | none
+sample_scaling: none  # sample normalization method: norm | standard | none
 
 
 # data
@@ -42,9 +42,9 @@ file_series:
   - /home/daniel/ownCloud/data/func/run_9_bold.nii
   - /home/daniel/ownCloud/data/func/run_10_bold.nii
 
-# Corresponding condition files. Events of each experimental condition (onset, name, 
-# duration) are expected to be saved as a cell array in a mat file format that is 
-# comptible with SPM12.
+# Corresponding condition files. Events of each experimental condition (onsets, names, 
+# durations) are expected to be saved as a cell array in a .mat file format that is 
+# comptible with SPM12.*
 file_events:
   - /home/daniel/ownCloud/data/func/run_1_events.mat
   - /home/daniel/ownCloud/data/func/run_2_events.mat
@@ -56,9 +56,13 @@ file_events:
   - /home/daniel/ownCloud/data/func/run_8_events.mat
   - /home/daniel/ownCloud/data/func/run_9_events.mat
   - /home/daniel/ownCloud/data/func/run_10_events.mat
+  # *To be more precise, each .mat file must contain three cell arrays (onsets, names,
+  # durations) of shape 1x3. The first column is expected to contain the baseline
+  # condition which will be discarded. The remaining columns contain the experimental
+  # conditions that are used for binary classification.
 
-# Freesurfer geometries for multiple cortical depths. Single hemispheres are given
-# independently.
+# FreeSurfer geometries for multiple cortical depths. Single hemispheres are given
+# independently. Analyses will be performed for each provided cortical surface.
 file_layer:
   lh:
     - /home/daniel/ownCloud/data/ana/surf/lh.layer_0
@@ -87,12 +91,14 @@ file_layer:
 
 # A coordinate mapping that contains the transformation of surface coordinates to the
 # the space of fmri time series. This deformation file is optional and should be only
-# given if surface and volume data are not aligned to each other.
+# given if surface and volume data are not aligned to each other (used if not none).*
 file_deformation: /home/daniel/ownCloud/data/ana/deform/transformation.nii.gz
+# *see https://github.com/haenelt/FmriTools/blob/master/fmri_tools/cmap/generate_coordinate_mapping.py
+# for comparison
 
-# Surface overlays for feature selection. Data points are selected by their magnitude in 
-# the localizer overlay. When mutliple files are given, the average across overlays is 
-# first computed. Single hemispheres are given independently.
+# MGH surface overlays for feature selection. Data points are selected by their 
+# magnitude in the localizer overlay. When mutliple files are given, the average across 
+# overlays is first computed. Single hemispheres are given independently.
 file_localizer:
   lh:
     - /home/daniel/ownCloud/data/loc/lh.localizer1.mgh
@@ -101,9 +107,9 @@ file_localizer:
     - /home/daniel/ownCloud/data/loc/rh.localizer1.mgh
     - /home/daniel/ownCloud/data/loc/rh.localizer2.mgh
 
-# Label files to restrict data analysis to one cortical area (e.g. V1). When multiple 
-# files are give, the intersection of all labels is taken. Single hemispheres are given 
-# independently.
+# FreeSurfer .label files to restrict data analysis to one cortical area (e.g. V1). When 
+# multiple files are given, the intersection of all labels is taken. Single hemispheres 
+# are given independently.
 file_label:
   lh:
     - /home/daniel/ownCloud/data/ana/label/lh.v1.label
